--- a/qualites.html
+++ b/qualites.html
@@ -37,7 +37,7 @@
 			Bon élève
 		</h1>
 		<p class="paragraphe">
-			Je suis en Terminale STI2D avec environ 14,5 de moyenne pour les deux premiers trimestres. Les matières que j'apprécie et dans lesquelles j'ai un bon niveau sont: les mathématiques, les systèmes d'information numérique et l'anglais.
+			Je suis en Terminale STI2D avec une moyenne satisfaisante. Les matières que j'apprécie et dans lesquelles j'ai un bon niveau sont: les mathématiques, les systèmes d'information numérique et l'anglais.
 		</p>
 		<p class="paragraphe">
 			_______________
